fully functional admin home and view room pages

--- a/HMS/templates/admin_home.html
+++ b/HMS/templates/admin_home.html
@@ -4,8 +4,8 @@
         <div class="row">
             <div class="card col-lg-3 col-md-4 col-sm-5 col-xs-12" style="width: 18rem;background: #E6E6E6; margin-right: 40px; margin-top: 30px">
               <div class="card-body">
-                <h3 style="font-size: 100px">0 </h3>
-                <p class="card-text">Total number of rooms in [Hostel Name]</p>
+                <h3 style="font-size: 100px">{{ totalNumOfRooms }} </h3>
+                <p class="card-text">Total number of rooms in {{ hostelName }}</p>
               </div>
               <div class="card-action">
                 <a style="float: right" href="#">Full Details</a>
@@ -14,8 +14,8 @@
 
             <div class="card col-lg-3 col-md-4 col-sm-5 col-xs-12" style="width: 18rem;background: #E6E6E6; margin-right: 40px; margin-top: 30px">
               <div class="card-body">
-                <h3 style="font-size: 100px">0 </h3>
-                <p class="card-text">Total number of students in [Hostel Name]</p>
+                <h3 style="font-size: 100px">{{ totalNumofStudents }} </h3>
+                <p class="card-text">Total number of students in {{ hostelName }}</p>
               </div>
               <div class="card-action">
                 <a style="float: right" href="#">Full Details</a>
@@ -24,7 +24,7 @@
 
             <div class="card col-lg-3 col-md-4  col-sm-5 col-xs-12" style="width: 18rem;background: #E6E6E6; margin-right: 40px; margin-top: 30px">
               <div class="card-body">
-                <h3 style="font-size: 100px">0 </h3>
+                <h3 style="font-size: 100px"> {{ totalNumofFullyPaid }} </h3>
                 <p class="card-text">Total number of students who have fully paid</p>
               </div>
               <div class="card-action">
@@ -34,7 +34,7 @@
 
             <div class="card col-lg-3 col-md-4  col-sm-5 col-xs-12" style="width: 18rem;background: #E6E6E6; margin-right: 40px; margin-top: 30px">
               <div class="card-body">
-                <h3 style="font-size: 100px">0 </h3>
+                <h3 style="font-size: 100px">{{ fullyOccupiedRooms }} </h3>
                 <p class="card-text">Total number of fully occupied rooms</p>
               </div>
               <div class="card-action">
@@ -44,8 +44,8 @@
 
             <div class="card col-lg-3 col-md-4  col-sm-5 col-xs-12" style="width: 18rem;background: #E6E6E6; margin-right: 40px; margin-top: 30px">
               <div class="card-body">
-                <h3 style="font-size: 100px">0 </h3>
-                <p class="card-text">Total number of males in [Hostel Name]</p>
+                <h3 style="font-size: 100px">{{ totalNumOfMales }} </h3>
+                <p class="card-text">Total number of males in {{ hostelName}}</p>
               </div>
               <div class="card-action">
                 <a style="float: right" href="#">Full Details</a>
@@ -54,8 +54,8 @@
 
             <div class="card col-lg-3 col-md-4  col-sm-5 col-xs-12" style="width: 18rem;background: #E6E6E6; margin-right: 40px; margin-top: 30px">
               <div class="card-body">
-                <h3 style="font-size: 100px">0 </h3>
-                <p class="card-text">Total number of females in [Hostel Name]</p>
+                <h3 style="font-size: 100px">{{ totalNumOfFemales }} </h3>
+                <p class="card-text">Total number of females in {{ hostelName }}</p>
               </div>
               <div class="card-action">
                 <a style="float: right" href="#">Full Details</a>
