--- a/HMS/templates/view_rooms.html
+++ b/HMS/templates/view_rooms.html
@@ -5,7 +5,7 @@
             <div class="row">
                 <div class="card w-75" style="margin-bottom: 30px; background-color: #E3E3E3">
                   <div class="card-body">
-                    <h4 class="card-title">{{ room.name }}</h4>
+                    <h4 class="card-title">{{ room.room_num }}</h4>
                     <p class="card-text">This is a room with {{ room.beds }} beds.</p>
                     <a style="float: right" href="#" class="btn btn-primary">See room details</a>
                   </div>
