--- a/HMS/templates/admin_layout.html
+++ b/HMS/templates/admin_layout.html
@@ -44,7 +44,7 @@
                           <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('occupants_details') }}">Occupant Details</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link js-scroll-trigger text-white" href="#">Reports</a>
+                          <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('reports') }}">Reports</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-white" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Account</a>
