--- a/HMS/templates/reports.html
+++ b/HMS/templates/reports.html
@@ -1,48 +1,14 @@
 {% extends "admin_layout.html" %}
 {% block content %}
     <div class="row">
-        <div class="card w-75" style="margin-bottom: 30px; background-color: #E3E3E3">
-          <div class="card-body">
-            <h4 class="card-title">Total number of rooms in {{ hostelName }}</h4>
-            <a style="float: right" href="#" class="btn btn-primary">See room details</a>
-          </div>
-        </div>
-        <div class="card w-75" style="margin-bottom: 30px; background-color: #E3E3E3">
-          <div class="card-body">
-            <h4 class="card-title">Total number of students in {{ hostelName }}</h4>
-            <a style="float: right" href="#" class="btn btn-primary">See room details</a>
-          </div>
-        </div>
-        <div class="card w-75" style="margin-bottom: 30px; background-color: #E3E3E3">
-          <div class="card-body">
-            <h4 class="card-title">Total number of students who have fully paid</h4>
-            <a style="float: right" href="#" class="btn btn-primary">See room details</a>
-          </div>
-        </div>
-        <div class="card w-75" style="margin-bottom: 30px; background-color: #E3E3E3">
-          <div class="card-body">
-            <h4 class="card-title">Total number of fully occupied rooms</h4>
-            <a style="float: right" href="#" class="btn btn-primary">See room details</a>
-          </div>
-        </div>
-        <div class="card w-75" style="margin-bottom: 30px; background-color: #E3E3E3">
-          <div class="card-body">
-            <h4 class="card-title">Total number of males in {{ hostelName}}</h4>
-            <a style="float: right" href="#" class="btn btn-primary">See room details</a>
-          </div>
-        </div>
-        <div class="card w-75" style="margin-bottom: 30px; background-color: #E3E3E3">
-          <div class="card-body">
-            <h4 class="card-title">Total number of rooms in {{ hostelName }}</h4>
-            <a style="float: right" href="#" class="btn btn-primary">See room details</a>
-          </div>
-        </div>
-        <div class="card w-75" style="margin-bottom: 30px; background-color: #E3E3E3">
-          <div class="card-body">
-            <h4 class="card-title">Total number of females in {{ hostelName }}</h4>
-            <a style="float: right" href="#" class="btn btn-primary">See room details</a>
-          </div>
-        </div>
+        {% for i in reportContent.keys() %}
+            <div class="card w-75" style="margin-bottom: 30px; background-color: #E3E3E3">
+              <div class="card-body">
+                <h4 class="card-title">{{reportContent[i] + hostelName}} </h4>
+                <a style="float: right" href="{{ url_for('detailed_report', id = i) }}" class="btn btn-primary">See room details</a>
+              </div>
+            </div>
+        {% endfor %}
     </div>
 
 {% endblock %}
