--- a/HMS/static/main.css
+++ b/HMS/static/main.css
@@ -1,5 +1,5 @@
 #registerbody{
-  background-image: url('/static/img/back2.jpg');
+  background-image: url('/img/back2.jpg');
   background-size: cover;
 }
 
@@ -19,7 +19,7 @@ hr {
 }
 
 .hbody{
-  background-image: url('/static/img/back7.jpg');
+  background-image: url('/img/back7.jpg');
   background-size: cover;
 
 }
@@ -56,7 +56,7 @@ header.masthead{
   position: fixed;
   z-index: 9;
   width: 100%;
-  box-shadow: 3px;
+  box-shadow: 0 15px 25px rgba(0,0,0,0.5);
 }
 
 .content-section {
@@ -83,7 +83,7 @@ header.masthead{
   z-index: 9;
   margin-left: 60px;
   width: 100%;
-  box-shadow: 3px;
+  box-shadow: 0 15px 25px rgba(0,0,0,0.5);
 }
 
 .lcontent-section {
