--- a/HMS/templates/detailed_reports.html
+++ b/HMS/templates/detailed_reports.html
@@ -1,10 +1,8 @@
-{% extends "admin_layout.html" %}
+{% extends 'detailed_contentLayout.html' %}
 {% block content %}
     <div class="container">
         <div class="container">
             {{ table}}
         </div>
-
     </div>
-
 {% endblock %}
