--- a/HMS/templates/room_details.html
+++ b/HMS/templates/room_details.html
@@ -1,4 +1,4 @@
-{% extends "admin_layout.html" %}
+{% extends "detailed_contentLayout.html" %}
 {% block content %}
     <div class="container">
         {{ table}}
