edit room updated

--- a/HMS/templates/admin_layout.html
+++ b/HMS/templates/admin_layout.html
@@ -35,9 +35,8 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-white" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Room Details</a>
                             <div class="dropdown-menu">
-                                <a class="dropdown-item" href="{{ url_for('viewrooms')}}">View Rooms</a>
+                                <a class="dropdown-item" href="{{ url_for('viewrooms')}}">View/Edit Rooms</a>
                                 <a class="dropdown-item" href="{{ url_for('addroom')}}">Add Rooms</a>
-                                <a class="dropdown-item" href="{{ url_for('editroom')}}">Edit Rooms</a>
                             </div>
                         </li>
                         <li class="nav-item">
@@ -66,11 +65,21 @@
     <main role = "main" class="container">
         <div class="row">
             <div class="col-md-9" style="margin-top: 100px">
-                {% block content %}
-                {% endblock %}
+                <div style="margin: 0;">
+                    {% with messages = get_flashed_messages(with_categories=true) %}
+                        {% if messages %}
+                            {% for category, message in messages %}
+                                <div class="flash alert alert-{{ category }}">
+                                  {{ message }}
+                                </div>
+                            {% endfor %}
+                        {% endif %}
+                    {% endwith %}
+                </div>
+                {% block content %}{% endblock %}
             </div>
 
-             <div class="col-md-3">
+            <div class="col-md-3">
                 <div style="margin-top: 120px;padding: 20px; background: #E6E6E6;border-radius: 10px;box-shadow: 0 10px 20px rgba(0,0,0,0.2);">
                     <legend class="border-bottom mb-4">Announcements</legend>
                     <fieldset class="form-group">
@@ -105,7 +114,7 @@
                         </div>
                     </fieldset>
                 </div>
-          </div>
+            </div>
         </div>
     </main>
 
