Background Image Issue Fixed

--- a/HMS/templates/Home.html
+++ b/HMS/templates/Home.html
@@ -12,7 +12,7 @@
   </head>
 
 
-  <body class="hbody">
+  <body style="background-image: url('./static/img/back7.jpg');background-size: cover;">
     <nav class="navbar navbar-expand-lg navbar-dark navbar-fixed-top">
       <div class="container">
         <a href="/"> <img class="icon navbar-brand js-scroll-trigger" src="/static/img/whitelogo.png" alt="HMS icon" href="{{ url_for('home') }}"> </a>
