--- a/HMS/static/main.css
+++ b/HMS/static/main.css
@@ -19,7 +19,7 @@ hr {
 }
 
 .hbody{
-  background-image: url('/img/back7.jpg');
+  background-image: url('./static/img/back7.jpg');
   background-size: cover;
 
 }
