--- a/HMS/templates/admin_layout.html
+++ b/HMS/templates/admin_layout.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-    <link href="../static/main.css" rel="stylesheet">
+    <link rel="stylesheet" href="../static/main.css">
 
     {% if title %}
         <title>HMS - {{ title }}</title>
