--- a/HMS/templates/layout.html
+++ b/HMS/templates/layout.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-    <link href="../static/main.css" rel="stylesheet">
+    <link rel="stylesheet" href="../static/main.css">
 
     {% if title %}
         <title>HMS - {{ title }}</title>
@@ -16,7 +16,7 @@
     {% endif %}
   </head>
 
-  <body id="registerbody">
+  <body style="background-image: url('./static/img/back2.jpg');background-size: cover;">
     <header class="site-header">
       <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
         <div class="container">
