--- a/HMS/templates/admin_layout.html
+++ b/HMS/templates/admin_layout.html
@@ -37,6 +37,7 @@
                             <div class="dropdown-menu">
                                 <a class="dropdown-item" href="{{ url_for('viewrooms')}}">View/Edit Rooms</a>
                                 <a class="dropdown-item" href="{{ url_for('addroom')}}">Add Rooms</a>
+                                <a class="dropdown-item" href="{{ url_for('editroompricing')}}">Edit Room Pricing</a>
                             </div>
                         </li>
                         <li class="nav-item">
