delete room functionality

--- a/HMS/templates/view_rooms.html
+++ b/HMS/templates/view_rooms.html
@@ -7,7 +7,7 @@
                   <div class="card-body">
                     <h4 class="card-title">{{ room.room_num }}</h4>
                     <p class="card-text">This is a room with {{ room.beds }} beds.</p>
-                    <a style="float: right" href="{{ url_for('room_details', id = room.room_num) }}" class="btn btn-primary">See room details</a>
+                    <a style="float: right" href="{{ url_for('default_roomview', id = room.room_num) }}" class="btn btn-primary">See room details</a>
                   </div>
                 </div>
             </div>
