--- a/HMS/templates/admin_layout.html
+++ b/HMS/templates/admin_layout.html
@@ -20,7 +20,7 @@
         <!--Navigation Bar-->
         <nav class="navbar navbar-expand-lg navbar-light navbar-fixed-top" id="mainNav">
             <div class="container">
-                <a href="/"> <img class="icon navbar-brand js-scroll-trigger" src="/static/img/whitelogo.png" alt="HMS icon" href="{{ url_for('home') }}"> </a>
+                <a href="/admin"> <img class="icon navbar-brand js-scroll-trigger" src="/static/img/whitelogo.png" alt="HMS icon" href="{{ url_for('admin') }}"> </a>
                 <button class="navbar-toggler navbar-dark navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
