--- a/HMS/templates/payments.html
+++ b/HMS/templates/payments.html
@@ -3,8 +3,7 @@
         <div class="row">
             <div class="container">
                 <div>
-                   <p>Yaw Botwe</p>
-                    <p style="position: relative; left: 60%">2018-05-04</p>
+                   <a>Yaw Botwe</a><a style="position: relative; left: 80%">2018-05-04</a>
                 </div>
                 <div class="card w-85" style="background-color: #E6E6E6">
                     <img class="card-img-top" src="/static/img/back3.jpg" style="height: 300px" alt="Card image cap">
