--- a/HMS/templates/detailed_contentLayout.html
+++ b/HMS/templates/detailed_contentLayout.html
@@ -51,8 +51,8 @@
                             <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Account</a>
                             <div class="dropdown-menu">
                                 <a class="dropdown-item" href="{{ url_for('updateaccount')}}">Edit Admin Details</a>
-                                <a class="dropdown-item" href="#">Change Password</a>
-                                <a class="dropdown-item" href="#">Edit Hostel Details</a>
+                                <a class="dropdown-item" href="{{ url_for('change_Adminpassword')}}">Change Password</a>
+                                <a class="dropdown-item" href="{{ url_for('edit_hostelDetails')}}">Edit Hostel Details</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="{{ url_for('logout')}}">Logout</a>
                             </div>
