--- a/HMS/templates/payments.html
+++ b/HMS/templates/payments.html
@@ -1,10 +1,10 @@
 {% extends 'admin_layout.html' %}
 {% block content %}
-    {% for item in payment.items%}
+    {% for item in payment%}
         <div class="row">
-            <div class="container">
+            <div class="container" style="margin-bottom: 30px">
                 <div>
-                   <a> {{ payment.user.firstname }} {{ payment.user.lastname }}</a><a style="position: relative; left: 80%">{{post.date_posted.strftime('%Y-%m-%d')}}</a>
+                   <a> {{ item.user.firstname }} {{ item.user.lastname }}</a><a style="position: relative; left: 70%">{{item.date_posted.strftime('%Y-%m-%d')}}</a>
                 </div>
                 <div class="card w-85" style="background-color: #E6E6E6">
                     <img class="card-img-top" src="/static/img/back3.jpg" style="height: 300px" alt="Card image cap">
