--- a/HMS/templates/detailed_contentLayout.html
+++ b/HMS/templates/detailed_contentLayout.html
@@ -45,6 +45,9 @@
                           <a class="nav-link js-scroll-trigger text-dark" href="{{ url_for('occupants_details') }}">Occupant Details</a>
                         </li>
                         <li class="nav-item">
+                          <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('payments') }}">Payments</a>
+                        </li>
+                        <li class="nav-item">
                           <a class="nav-link js-scroll-trigger text-dark" href="{{ url_for('reports') }}">Reports</a>
                         </li>
                         <li class="nav-item dropdown">
