--- a/HMS/templates/payments.html
+++ b/HMS/templates/payments.html
@@ -9,23 +9,8 @@
                 <div class="card w-85" style="background-color: #E6E6E6">
                     <img class="card-img-top" src="/static/img/back3.jpg" style="height: 300px" alt="Card image cap">
                     <div class="card-body">
-                        <form method = "POST" action = "" >
-                           <div class="form-group">
-                                {% if form.price.errors %}
-                                    {{form.price(class="form-control form-control-lg is-invalid")}}
-                                    <div class = "invalid-feedback">
-                                        {% for error in form.price.errors %}
-                                            <span> {{error}}</span>
-                                        {%endfor%}
-                                    </div>
-                                {%else%}
-                                    {{form.price(class="form-control form-control-lg")}}
-                                {%endif%}
-                            </div>
-                        </form>
-                        <div class = "form-group">
-                            {{form.submit(class="btn btn-outline-info")}}
-                        </div>
+                        <a style="float: right" href="{{ url_for('input_payment', id = item.image_id) }}" class="btn btn-primary">See room details</a>
+
                     </div>
                 </div>
             </div>
