complete payment functionality fr

--- a/HMS/templates/payments.html
+++ b/HMS/templates/payments.html
@@ -9,7 +9,7 @@
                 <div class="card w-85" style="background-color: #E6E6E6">
                     <img class="card-img-top" src="/static/img/back3.jpg" style="height: 300px" alt="Card image cap">
                     <div class="card-body">
-                        <a style="float: right" href="{{ url_for('input_payment', id = item.image_id) }}" class="btn btn-primary">See room details</a>
+                        <a style="float: right" href="{{ url_for('input_payment', id = item.image_id) }}" class="btn btn-primary">Add payment details</a>
 
                     </div>
                 </div>
