--- a/HMS/templates/student_layout.html
+++ b/HMS/templates/student_layout.html
@@ -39,6 +39,9 @@
                         {% endif %}
                         {% if user.hostel_id != None and user.room_id != None %}
                             <li class="nav-item">
+                              <a class="nav-link js-scroll-trigger text-white" href="#">View Room</a>
+                            </li>
+                            <li class="nav-item">
                               <a class="nav-link js-scroll-trigger text-white" href="#">Send Payment Receipt</a>
                             </li>
                         {% endif %}
