--- a/HMS/templates/pick_a_hostel.html
+++ b/HMS/templates/pick_a_hostel.html
@@ -11,7 +11,7 @@
                     <h4 class="card-text text-center">{{ hostel['title'] }}</h4>
                   </div>
                   <div class="card-action">
-                    <a class="btn btn-info" style="float: right; margin: 10px" href="#">See hostel details</a>
+                    <a class="btn btn-info" style="float: right; margin: 10px" href="{{ url_for('picked_hostel', id = hostel['id']) }}">See hostel details</a>
                   </div>
                 </div>
             {% endfor %}
