--- a/HMS/templates/student_announcement_page.html
+++ b/HMS/templates/student_announcement_page.html
@@ -1,6 +1,6 @@
 {% extends "student_layout.html" %}
 {% block content %}
-    {% for announcement in announcement.items%}
+    {% for announcement in announcement%}
         <div class="row">
             <div class="container" style="margin-bottom: 30px">
                 <div>
