functionality for students to view rooms and leave room

--- a/HMS/templates/detailed_studentLayout.html
+++ b/HMS/templates/detailed_studentLayout.html
@@ -30,16 +30,16 @@
                     <ul class="navbar-nav ml-auto">
 
                         <li class="nav-item">
-                          <a class="nav-link js-scroll-trigger text-dark" href="#">Home</a>
+                          <a class="nav-link js-scroll-trigger text-dark" href="{{ url_for('student') }}">Home</a>
                         </li>
                         {% if user.hostel_id != None and user.room_id == None %}
                             <li class="nav-item">
-                              <a class="nav-link js-scroll-trigger text-white" href="#">Book Room</a>
+                              <a class="nav-link js-scroll-trigger text-dark" href="#">Book Room</a>
                             </li>
                         {% endif %}
                         {% if user.hostel_id != None and user.room_id != None %}
                             <li class="nav-item">
-                              <a class="nav-link js-scroll-trigger text-dark" href="#">View Room</a>
+                              <a class="nav-link js-scroll-trigger text-dark" href="{{ url_for('student_viewroom') }}">View Room</a>
                             </li>
                             <li class="nav-item">
                               <a class="nav-link js-scroll-trigger text-dark" href="#">Send Payment Receipt</a>
