--- a/HMS/templates/student_layout.html
+++ b/HMS/templates/student_layout.html
@@ -30,7 +30,7 @@
                     <ul class="navbar-nav ml-auto">
 
                         <li class="nav-item">
-                          <a class="nav-link js-scroll-trigger text-white" href="#">Home</a>
+                          <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('student') }}">Home</a>
                         </li>
                         {% if user.hostel_id != None and user.room_id == None %}
                             <li class="nav-item">
@@ -39,7 +39,7 @@
                         {% endif %}
                         {% if user.hostel_id != None and user.room_id != None %}
                             <li class="nav-item">
-                              <a class="nav-link js-scroll-trigger text-white" href="#">View Room</a>
+                              <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('student_viewroom') }}">View Room</a>
                             </li>
                             <li class="nav-item">
                               <a class="nav-link js-scroll-trigger text-white" href="#">Send Payment Receipt</a>
