--- a/HMS/templates/student_payment.html
+++ b/HMS/templates/student_payment.html
@@ -4,7 +4,7 @@
         {{ form.hidden_tag() }}
         <fieldset class="form-group">
             <legend class="border-bottom mb-4"><strong>Make Payment</strong><br>
-                <p>Amount left-{{amount_remaining}}</p></legend>
+            </legend>
             <div class="form-group">
                 {{ form.receipt.label(class="form-control-label") }}
                 {% if form.receipt.errors %}
@@ -18,9 +18,10 @@
                     {{ form.receipt(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
-        <div class="form-group">
-            {{ form.submit(class="btn btn-outline-info") }}
-        </div>
+            <div class="form-group">
+                {{ form.submit(class="btn btn-outline-info") }}
+            </div>
+        </fieldset>
     </form>
 
 
