--- a/HMS/templates/detailed_studentLayout.html
+++ b/HMS/templates/detailed_studentLayout.html
@@ -42,7 +42,7 @@
                               <a class="nav-link js-scroll-trigger text-dark" href="{{ url_for('student_viewroom') }}">View Room</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link js-scroll-trigger text-dark" href="#">Send Payment Receipt</a>
+                              <a class="nav-link js-scroll-trigger text-dark" href="{{ url_for('student_payment') }}">Send Payment Receipt</a>
                             </li>
                         {% endif %}
                         <li class="nav-item dropdown">
