--- a/HMS/templates/detailed_studentLayout.html
+++ b/HMS/templates/detailed_studentLayout.html
@@ -48,7 +48,7 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Account</a>
                             <div class="dropdown-menu">
-                                <a class="dropdown-item" href="#">Edit Personal Details</a>
+                                <a class="dropdown-item" href="{{ url_for('updateaccount') }}">Edit Personal Details</a>
                                 <a class="dropdown-item" href="#">Change Password</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="{{ url_for('logout')}}">Logout</a>
