--- a/HMS/templates/student_layout.html
+++ b/HMS/templates/student_layout.html
@@ -43,7 +43,7 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-white" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Account</a>
                             <div class="dropdown-menu">
-                                <a class="dropdown-item" href="{{ url_for('updateaccount') }}">Edit Personal Details</a>
+                                <a class="dropdown-item" href="{{ url_for('updatestudentaccount') }}">Edit Personal Details</a>
                                 <a class="dropdown-item" href="#">Change Password</a>
                                 {% if user.hostel_id != None and user.room_id == None %}
                                     <a class="dropdown-item" href="#">Leave Hostel</a>
