--- a/HMS/templates/Home.html
+++ b/HMS/templates/Home.html
@@ -21,18 +21,36 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('about') }}">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('tour') }}">Take a Tour</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('signup')}}">Sign Up</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('login') }}">Login</a>
-            </li>
+              {% if current_user.is_authenticated  %}
+                    <li class="nav-item">
+                      <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('about') }}">About</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('tour') }}">Take a Tour</a>
+                    </li>
+                    {% if current_user.role == 'admin' %}
+                        <li class="nav-item">
+                          <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('admin')}}">Admin Home</a>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                          <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('student')}}">Student Home</a>
+                        </li>
+                    {% endif %}
+              {% else %}
+                    <li class="nav-item">
+                      <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('about') }}">About</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('tour') }}">Take a Tour</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('signup')}}">Sign Up</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('login') }}">Login</a>
+                    </li>
+              {% endif %}
           </ul>
         </div>
       </div>
