--- a/HMS/templates/detailed_studentLayout.html
+++ b/HMS/templates/detailed_studentLayout.html
@@ -20,7 +20,7 @@
         <!--Navigation Bar-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-fixed-top" id="mainNav">
             <div class="container">
-                <a href="#"> <img class="icon navbar-brand js-scroll-trigger" style="width: 91px; height: 50px" src="/static/img/blacklogo.png" alt="HMS icon" href="#"> </a>
+                <a href="#"> <img class="icon navbar-brand js-scroll-trigger" style="width: 91px; height: 50px" src="/static/img/blacklogo.png" alt="HMS icon" href="{{ url_for('student') }}"> </a>
                 <button class="navbar-toggler navbar-toggler-right" style="border-color: grey" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
