Flash Messages Fixed

--- a/HMS/templates/logInError.html
+++ b/HMS/templates/logInError.html
@@ -7,7 +7,7 @@
 <body>
 
     <h1>Login Error</h1>
-    <h4>Seems like you are not registered as an admin</h4>
+    <h4>You do not have permission to access this page</h4>
 
 </body>
 </html>
