--- a/HMS/templates/student_layout.html
+++ b/HMS/templates/student_layout.html
@@ -46,7 +46,7 @@
                                 <a class="dropdown-item" href="{{ url_for('updatestudentaccount') }}">Edit Personal Details</a>
                                 <a class="dropdown-item" href="#">Change Password</a>
                                 {% if user.hostel_id != None and user.room_id == None %}
-                                    <a class="dropdown-item" href="#">Leave Hostel</a>
+                                    <a class="dropdown-item" href="{{ url_for('student_leavehostel') }}">Leave Hostel</a>
                                 {% endif %}
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="{{ url_for('logout')}}">Logout</a>
