--- a/HMS/templates/admin_layout.html
+++ b/HMS/templates/admin_layout.html
@@ -47,6 +47,9 @@
                           <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('payments') }}">Payments</a>
                         </li>
                         <li class="nav-item">
+                          <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('admin_announce') }}">Announcements</a>
+                        </li>
+                        <li class="nav-item">
                           <a class="nav-link js-scroll-trigger text-white" href="{{ url_for('reports') }}">Reports</a>
                         </li>
                         <li class="nav-item dropdown">
@@ -81,46 +84,6 @@
                     {% endwith %}
                 </div>
                 {% block content %}{% endblock %}
-            </div>
-
-            <div class="col-md-3">
-                <div style="margin-top: 120px;padding: 20px; background: #E6E6E6;border-radius: 10px;box-shadow: 0 10px 20px rgba(0,0,0,0.2);">
-                    <form method = "POST" action = "" >
-                        <fieldset class="form-group">
-                        <legend class="border-bottom mb-4">Announcements</legend>
-
-                            <div class="form-group">
-                                {{ form2.subject.label(class="form-control-label") }}
-                                {% if form2.subject.errors %}
-                                    {{ form2.subject(class="form-control form-control-lg is-invalid") }}
-                                    <div class="invalid-feedback">
-                                        {% for error in form2.subject.errors %}
-                                            <span>{{ error }}</span>
-                                        {% endfor %}
-                                    </div>
-                                {% else %}
-                                    {{ form2.subject(class="form-control form-control-lg") }}
-                                {% endif %}
-                            </div>
-                            <div class="form-group">
-                                {{ form2.message.label(class="form-control-label") }}
-                                    {% if form2.message.errors %}
-                                        {{ form2.message(class="form-control form-control-lg is-invalid") }}
-                                        <div class="invalid-feedback">
-                                            {% for error in form2.message.errors %}
-                                                <span>{{ error }}</span>
-                                            {% endfor %}
-                                        </div>
-                                    {% else %}
-                                        {{ form2.message(class="form-control form-control-lg") }}
-                                    {% endif %}
-                            </div>
-                        </fieldset>
-                        <div class="form-group">
-                            {{ form2.submit(class="btn btn-outline-info") }}
-                        </div>
-                    </form>
-                </div>
             </div>
         </div>
     </main>
