left with notFullyPaid report and edit rooms form

--- a/HMS/templates/change_Studentpassword.html
+++ b/HMS/templates/change_Studentpassword.html
@@ -1,4 +1,4 @@
-{% extends 'admin_layout.html' %}
+{% extends 'student_layout.html' %}
 {% block content %}
     <div style="padding: 25px;" >
         <form method = "POST" action = "" enctype="multipart/form-data">
