--- a/HMS/templates/addroom.html
+++ b/HMS/templates/addroom.html
@@ -31,6 +31,19 @@
                         {{form.beds(class="form-control form-control-lg")}}
                     {% endif%}
                 </div>
+                <div class = "form-group" >
+                    {{form.gender.label(class="form-control-label")}}
+                    {%if form.gender.errors%}
+                        {{form.gender(class="form-control form-control-lg is-invalid")}}
+                        <div class = "invalid-feedback">
+                            {%for error in form.gender.errors%}
+                                <span> {{error}} </span>
+                            {%endfor%}
+                        </div>
+                    {%else%}
+                        {{form.gender(class="form-control form-control-lg")}}
+                    {% endif%}
+                </div>
             </fieldset>
             <div class = "form-group">
                 {{form.submit(class="btn btn-outline-info")}}
