--- a/HMS/templates/admin_announce.html
+++ b/HMS/templates/admin_announce.html
@@ -8,6 +8,7 @@
 
                     <div class="form-group">
                         {{ form2.subject.label(class="form-control-label") }}
+                        {{ form2.csrf_token }}
                         {% if form2.subject.errors %}
                             {{ form2.subject(class="form-control form-control-lg is-invalid") }}
                             <div class="invalid-feedback">
@@ -21,6 +22,7 @@
                     </div>
                     <div class="form-group">
                         {{ form2.message.label(class="form-control-label") }}
+                        {{ form2.csrf_token }}
                             {% if form2.message.errors %}
                                 {{ form2.message(class="form-control form-control-lg is-invalid") }}
                                 <div class="invalid-feedback">
