--- a/HMS/templates/edit_hostelDetails.html
+++ b/HMS/templates/edit_hostelDetails.html
@@ -6,6 +6,7 @@
                 <legend class = "border-bottom mb-4" > {{legend}} </legend>
                 <div class="form-group">
                     {{form.description.label(class="form-control-label")}}
+                    {{ form.csrf_token }}
                     {% if form.description.errors %}
                         {{form.description(class="form-control form-control-lg is-invalid")}}
                         <div class = "invalid-feedback">
