--- a/HMS/templates/room_details.html
+++ b/HMS/templates/room_details.html
@@ -7,6 +7,7 @@
                 <legend class = "border-bottom mb-4" > {{legend}} </legend>
                 <div class="form-group">
                     {{form.room_num.label(class="form-control-label")}}
+                    {{ form.csrf_token }}
                     {% if form.room_num.errors %}
                         {{form.room_num(class="form-control form-control-lg is-invalid")}}
                         <div class = "invalid-feedback">
@@ -20,6 +21,7 @@
                 </div>
                 <div class = "form-group" >
                     {{form.beds.label(class="form-control-label")}}
+                    {{ form.csrf_token }}
                     {%if form.beds.errors%}
                         {{form.beds(class="form-control form-control-lg is-invalid")}}
                         <div class = "invalid-feedback">
@@ -29,6 +31,21 @@
                         </div>
                     {%else%}
                         {{form.beds(class="form-control form-control-lg")}}
+                    {% endif%}
+                </div>
+
+                <div class = "form-group" >
+                    {{form.gender.label(class="form-control-label")}}
+                    {{ form.csrf_token }}
+                    {%if form.gender.errors%}
+                        {{form.gender(class="form-control form-control-lg is-invalid")}}
+                        <div class = "invalid-feedback">
+                            {%for error in form.gender.errors%}
+                                <span> {{error}} </span>
+                            {%endfor%}
+                        </div>
+                    {%else%}
+                        {{form.gender(class="form-control form-control-lg")}}
                     {% endif%}
                 </div>
                 <div>
