--- a/HMS/templates/tour.html
+++ b/HMS/templates/tour.html
@@ -8,7 +8,7 @@
         <br>
         {% for i in range(0,tourContent|length) %}
             {% if( i % 2 == 0) %}
-                <div class="row">
+                <div class="row" style="margin-bottom: 20px">
                     <div class="col-lg-4 col-sm-12">
                         <img style="height: 350px" class="img-fluid rounded" src="{{ tourContent[i].pic }}">
                     </div>
